test/expected/regression-delayed-formater.txt
/scripts/regression-delayed-formater.js:18
throw new Error('trace');
^

Error: trace
    at-hack Object.<anonymous> (/scripts/regression-delayed-formater.js:18:7)
    at-hack Module._compile (module.js:541:32)
    at-hack Object.Module._extensions..js (module.js:550:10)
    at-hack Module.load (module.js:458:32)
    at-hack tryModuleLoad (module.js:417:12)
    at-hack Function.Module._load (module.js:409:3)
    at-hack Module.runMain (module.js:575:10)
    at-hack run (bootstrap_node.js:340:7)
    at-hack startup (bootstrap_node.js:132:9)
    at-hack bootstrap_node.js:455:3
